Fix flex positioning of board users because 'justify-content: right' didn't work on Safari

--- a/src/components/BoardHeader/BoardHeader.scss
+++ b/src/components/BoardHeader/BoardHeader.scss
@@ -83,5 +83,5 @@
 .board-header__users {
   width: 25%;
   display: flex;
-  justify-content: right;
+  flex-direction: row-reverse;
 }
